syntax = "proto3";

package dxos.test.extensions;

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions {
  string defaultValue = 5001;
}


message WithDefaultField {
  /// Tag
  string tag = 1 [(defaultValue) = "latest"];
}

message ContainingMessageWithExtensions {
  oneof kind {
    string str = 1;
    WithDefaultField msg = 2;
  }
}
